--- a/index.html
+++ b/index.html
@@ -415,14 +415,7 @@
   </div>
 </header>
 <body>
-    <div class="fixed-video-bg">
-        <video autoplay loop muted playsinline class="video-background">
-            <source src="static/ok.webm" type="video/webm">
-        </video>
-        <div class="video-overlay"></div>
-    </div>
-    <div id="three-container"></div>
-    <!-- <canvas id="bg"></canvas> -->
+    <canvas id="bg"></canvas>
     <div id="preloader">
         <div class="spinner"></div>
     </div>
